# pgopps

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: build.yml
include/: pgopps.h
src/: cloud.c  connection.c  fixscript.c  htmlreport.c  info.c  main.c  report.c  score.c  utils.c
src/checks/: audit_logging.c  backup_recovery.c  configuration.c  data_integrity.c  encryption.c  maintenance.c  performance.c  registry.c  registry.h  replication_ha.c  security.c
